[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pdfbolt"
version = "1.0.0"
description = "Official Python SDK for the PDFBolt API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "PDFBolt" }
]
keywords = ["pdf", "html-to-pdf", "pdfbolt", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "requests>=2.31,<3"
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.13,<2",
  "pytest>=8,<9",
  "responses>=0.25,<1",
  "ruff>=0.8,<1",
  "types-requests>=2.32,<3",
  "twine>=5,<7"
]

[project.urls]
Homepage = "https://pdfbolt.com"
Documentation = "https://pdfbolt.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfbolt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pdfbolt"]
